--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2157601897307862"
-     crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
@@ -20,23 +18,83 @@
 <body>
   <div class="header">These are the complete <strong>Imaginative</strong> and <strong>Narrative</strong> composition I wrote.</div class="header">
   <div class="links">
+
+    <a href="#5">Legend was true</a>
+    <a href="#4">School Days</a>
+    <a href="#3">Airtel Money Bank</a>
+    <a href="#2">Hacking the Death</a>
     <a href="#1">Education System</a>
-    <a href="#2">Fear of Death</a>
   </div>
+  <!-- 
+  <div class="compParent" id="">
+    <h1 class="head"></h1>
+    <div class="comp"></div>
+  </div> -->
+  <div class="compParent" id="5">
+    <h1 class="head">Write a story ending with, "...... the legend was true after all. : 13/11/2021</h1>
+    <div class="comp">
+<p>
+I was the cyber security expert in GOOGLE LLC. Many legends worked under me for entighting the security of the world famous mainling system THE GMAIL which was so wealthier for the hacker to get access to the very personal detainl of approx 1.5 billion innocents.</p>
+<p>
+Everything was gound fair and smoothe in my security department. Even the legends who made this security and were known to all of its security mechanism were unable to crack it. In the same time we were also proctising to get our names in Guiness book of world record for the best security department in the world which was to be held the next day. But their was the one who always told during practise, "I am to crack it, just a second, just a second", but never did was Priyanshu, not actually the legend according to me.</p>
+<p>
+Suddenly, first of 78 conputers got shutdown followed bya message in second "Sending... 7/1470". I was astonished to know that our systems got a security attack. I annouced to the legends to stop this imedditely. All sat except one of the legends. I ordered Priyanshu to let him sit on his computer. This was because one of our computer got closed. The message was reached to 237/1470. We were just left with few of heart beats in the company to ensure those data.</p>
+<p>
+Everyone was typing with almost the speed of light. And the room was filled with sound nonw other thatn keystrokes. One or our PLAYER was faint unfortunately may be due to stress. Priyanshu sat there. the message was now showing "1000/1470 ...ravan". Ravan was may be the name of the hacker. Priyanshu typed a command which speedened the file sending rate and all our computer got turned off within seconds:( I was unable to understand and said to him, "What you did stupid?". He said "Sir just 3 minutes, only 3 minutes." I shouted, "How!". He said, "Sir as our data was encrypted so the hacker will need the decryptor, which I sent him...". I said, "Have you gone mad. Sent the decryptor!". He continued, "Then once he will run the decryptor which will not actually decrypt rather send all our data back to us and terminates from the hacker". How could I believe this guy who only said but never succeed. Those moments were passing like tunneled highway with no lights. We were unable to imagine our future. I saw some computers were rebooting. I checked for the data and fortunately it was safe back. I was with a kind of feeling of relaxation and pleasure that I never had experienced before. </p>
+<p>
+Priyanshu said, "Sir, hacker is not the one who hacks the computer but is the one who HACKED THE HACKER". Finally the legend was true after all....</p></div>
+  </div>
+  <div class="compParent" id="4">
+    <h1 class="head">School days are the happiest of our lives: 01/10/2021</h1>
+    <div class="comp">
+<p>
+I am in class 9 now and left only with 11.5% of school life with me and after which I will have to leave the school. The time will come when my these friends who are golden will be my firends of the time when the days were olden.</p>
+<p>
+Its so frustrating and irritating to have these thoughts floating in the brain. I know this is the truth to remain unchanged ever. This time would come after 1 & 1/2 years later. so why to carry this heavy load from now and waste the present moments. But this freedom to enjoy the present in only available in school life as having no any tension about any thing, thus proving it the happiest moment of our lives.</p>
+<p>
+This happiest moments of lives fill new, narrow memory with the golden remaings of the school life like, that funny teacher, lovely loving mam's sketch, face of the strict teacher like any sketch of villains face, the very rude and proud topper girl who became moniter each year and who never talked to any boys instead of writing their names and giving it to the teacher. Sketches of those best friends who didn't submit their homework for the one who didn't brought the copy. The first bearutful crush with whom never got any chace to talk. The moment of tension when the teacher had told to do a homework which was impposible but possible for the only topper girl.</p>
+<p>
+After 1.5 year these brightly coloured thoughts would be like dring in sun and its colour will fade away slowly and we would be just  left with those bearutful, but colourless memories of the most golden days of our life.</p>
+<p>
+The time when we would be of 60s and 70s then these mostly faded toughts would cover our half blind eyes like tears in our eyes and prove themselves to the real earnings of the life. At that time wherever I would be, I may forget these priceless memories but these composition would be very enough to make my faded memories colourful. But I will never forget that TOPPER GIRL..!!</p>
+    </div>
+  </div>
+
+  <div class="compParent" id="3">
+    <h1 class="head">Airtel Money Bank HACK. : 13/09/2021</h1>
+    <div class="comp">
+<p>I got my conputer in 2019. It was the transition period of mine like a tapole changes to frog. During the lockdown the whole day and few hours of night I got  busy in my laptop. My experience in coding was increasing almost by 12 hours per day. Looking at this very interestint work I suggested my friend to buy a laptop and start learning this. He was very good in mathematics I sad to him,"Priyanshu, see I know youtpuzzeling mind which can sove any puzzle". He said, "Oh! no. this thing everybody have but the dont't prefer to show and I just show off". I just ignored that and said to start learnign coding.</p>
+<p>
+After a few days, he called me and asked to come there to setup his new laptop for coding. I was excited like a mad has got freedom. I went there and gave my all coourses, setups and tips to learn it faster. In fact most of the time we were typing in the same room. his learning skill was so faster that he learnt just in a month for what I had taken whole year of lockdown. In the other hand he was caless that he didn't recheck some malecious code beofre executing just because of excitement.</p>
+<p>
+One day he introduced me to a bug that was found in Airtel Money bank. I just ingnored that nothing can be done with this. He said, "No I can write a code that can cause leakage of money from here". I said "I have one year more experience than you". "Ok! Your might be right", he said.</p>
+<p>
+The next day,
+I was thinking that that bug could surely be very harmful, but I didn't tell him because he would have surely tried. Priyanshu came with his notebook with a very excited face and explained me all about how mone cound be taken out to his bank account. For this dangerous code we found a victim who was a currupt police officer. The code needed just the phone number of victim and rest data it could come up with. He entered this number. Executed the program of $2000 which would make his balance $11000. We were waiting for confirmation message and it came with written somethign but $2000 was only visible to us because of excitement. Again he executed the program for $4000 ropees and confirmed it with the message.</p>
+<p>
+Now he was to check his bank money and he said it $3000 ropees only. We cound not understand this. We re-checked the 1st message and read carefull, It was, "Amt $2000 has been successfully paid from your account xxx xxx xxx 438".</p>
+<p>
+I understood what had happened he had switched the to and from data with a very silly mistake due to a boolean value.</p>
+<p>
+From then It has become his habbit to recheck the code and execute carefully.</p>
+
+    </div>
+  </div>
+
   <div id="1" class="compParent">
-    <h1 class="head">Education System</h1>
+    <h1 class="head">Education System : 03/08/2021</h1>
     <div class="comp">
       <p>
-      Madan a very Intelligent boy of his school he didn't like the education system so for. And wanted to change it from its base to tip. He knew it very well that if he had to change it then he must go to sky from this wrong way only. He also knew, once if someone goes to sky then their is no place to sit there. So, if he and stops, then it will be of no use. He accelareted his speed of sucess at a very entreame that after college only in 1 year. He was ranked 1<sup>st</sup> in UPSE. But this was not the glory of success. It was just 1% of his way to his goal. Now it was not appearing so blur rather clear like glass crystal to become a prime minister of India Madan. But as he had not tested the depression of loosing single times. Therefore everyday he went educated people who could eat the part of cake which was being eaten by Madan. Many refused and he was constantly facing the faliure. It seemed that the fate hay become his enemy by giving all the flops of his life at
+      Madan a very Intelligent boy of his school he didn't like the education system so for. And wanted to change it from its base to tip. He knew it very well that if he had to change it then he must go to sky from this wrong way only. He also knew it once it some one you to stay then their is no place to sit there. So, if he and stops, then it will be of no use. He accelareted his speed of sucess at a very entreame that after college only in 1 year. He was ranked 1<sup>st</sup> in UPSE. But this was not the glory of success. It was just 1% of his way to his goal. Now it was not appearing so blur rather clear like glass crystal to become a prime minister of India Madan. But as he had not tested the depression of loosing single times. Therefore everyday he went educated people who could eat the part of cake which was being eaten by Madan. Many refused and he was constantly facing the faliure. It seemed that the fate hay become his enemy by giving all the flops of his life at
       </p>
       <p>
-      Madan was so dipressed that for a while he thought, "Life of a currupt I.A.S officer is much more better that that of than Mother Teresa".
+      Madan was so dipressed that for a while he thought life of a currupt I.A.S officer is much more better that that of than Mother Teresa.
       </p>
       <p>
-      There was another boy studling in class 10 in Latehar in a well affiliated school. He was mini me of I.A.S. Madan. His aim was so a clear as a glass crystal. After the board exam result & came with percentage 99.9%. The newspapers of whole Jharkhand were full of his name and photo. Yet the fate was playing a game of winning on loosing and unfortunately the next day newspaper was having 50% more selling with healdine,"Raghu, one who scored 99.9%. He comitted suicide". He had a written suicide note composed of almost 3 pages of eulogy of the present education system. All that student in country had made Raghu the Bhagat Singh. The current government had to completely transform the education system, according to all the points given in suicide netes. 
+      There was another boy studling in class 10 in Latehar in a well affiliated school. He was mini me of I.A.S. Madan. His aim was so a clear as a glass crystal. After the board exam result & came with percentage 99.9%. the newspapers of whole Jharkhand were full of his name and photo. Yet the fate was playing a game of winning on loosing and unfortunately the next day newspaper was having 50% more selling with healdine,"Raghu, one who scored 99.9%. He comitted suicide". He had a  suicide note composed of almost 3 pages of eulogy of the present education system. All that student in country had made Raghu the Bhagat Singh. The Government current had to completely transform the education system, according to all the points given in suicide netes. 
       </p>
       <p>
-      And this was the day when Madan a top ranked IAS officer with head of the committee got the work. Which was his final aim.
+      And this was the day when Madan a top ranked IAS officer with head of his the commitee got the work. Which was his final <aim class="p"></aim>
       </p>
       <p>
       After 10 years the suicide rate of students in India was decreased to 90% of before.
@@ -45,7 +103,7 @@
   </div>
 
   <div id="2" class="compParent">
-    <h1 class="head">Fear of Death</h1>
+    <h1 class="head">Fear of Death : 12/08/2021</h1>
     <div class="comp">
       <p>
         The whole night I dreamt like the one who was left only brave in this giant world. Some dreams I remembered with full enmotion that I will never loose and I could sacrifice my everything even my for her. The ultimate mother of mine: The Bharat Mata.
